--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,11 @@ jobs:
   build:
     docker:
       # specify the version here
-      - image: circleci/elixir:1.4
+      - image: circleci/elixir:1.10.1
+      - image: circleci/mysql:8.0.4
+        environment:
+          MYSQL_ROOT_PASSWORD: ""
+          MYSQL_DATABASE: streamshore_dev
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -18,6 +22,7 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - run: mix local.hex
       - run: mix deps.get
       - run: mix ecto.create
       - run: mix test
