--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,18 @@ jobs:
     steps:
       - checkout
 
+      - run:
+      # Our primary container isn't MYSQL so run a sleep command until it's ready.
+          name: Waiting for MySQL to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+
       # specify any bash command here prefixed with `run: `
       - run: mix local.hex --force
       - run: mix deps.get
