--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,3 +53,9 @@ workflows:
           repo: streamshore
           tag: '${CIRCLE_SHA1}'
           extra-build-args: "--build-arg DB=$DATABASE_URL --build-arg SECRET=$SECRET_KEY_BASE"
+        - aws-ecs/deploy-service-update:
+            requires:
+              - aws-ecr/build-and-push-image
+            family: 'streamshore-backend'
+            cluster-name: 'streamshore'
+            container-image-name-updates: 'container=streamshore-backend,tag=${CIRCLE_SHA1}'
