--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       # Our primary container isn't MYSQL so run a sleep command until it's ready.
           name: Waiting for MySQL to be ready
           command: |
-            for i in `seq 1 10`;
+            for i in `seq 1 15`;
             do
               nc -z 127.0.0.1 3306 && echo Success && exit 0
               echo -n .
@@ -49,8 +49,7 @@ jobs:
       - aws-ecr/build-and-push-image:
           filters:
             branches:
-              only:
-                - master
+              only: master
           requires:
             - build
           repo: streamshore
